--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="w-full md:w-1/3 lg:w-1/4 p-4 sm:p-6 bg-gray-800 shadow-lg overflow-y-auto control-panel" id="control-form">
             <h1 class="text-xl sm:text-2xl font-bold mb-6 text-cyan-400">
                 <span class="block sm:inline">Titulación </span>
-                <span class="block sm:inline whitespace-nowrap">ácido-base</span>
+                <span class="block sm:inline whitespace-nowrap">Ácido-Base</span>
             </h1>
             
             <div class="space-y-6">
