--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="flex flex-col md:flex-row h-screen">
         <!-- Panel de Control -->
         <div class="w-full md:w-1/3 lg:w-1/4 p-4 sm:p-6 bg-gray-800 shadow-lg overflow-y-auto control-panel" id="control-form">
-            <h1 class="text-xl sm:text-2xl font-bold mb-6 text-cyan-400">
+            <h1 class="text-xl sm:text-2xl font-bold mb-6 text-cyan-400 text-center">
                 <span class="block sm:inline">Titulación </span>
                 <span class="block sm:inline whitespace-nowrap">Ácido-Base</span>
             </h1>
@@ -527,7 +527,7 @@
                                 min: 0,
                                 title: { display: true, text: 'Volumen de titulante (mL)', font: { size: 16 }, color: '#9ca3af' }
                             },
-                            y: { title: { display: true, text: 'Fracción de especie', font: { size: 12 }, color: '#9ca3af' }, min: 0, max: 1, grid: { color: 'rgba(255, 255, 255, 0.1)' }, ticks: { color: '#9ca3af' } }
+                            y: { title: { display: true, text: 'Fracción de especie', font: { size: 16 }, color: '#9ca3af' }, min: 0, max: 1, grid: { color: 'rgba(255, 255, 255, 0.1)' }, ticks: { color: '#9ca3af' } }
                         },
                         plugins: { legend: { position: 'top', labels: { color: '#d1d5db', boxWidth: 20, padding: 20 } }, tooltip: { mode: 'index', intersect: false, callbacks: { label: (c) => `${c.dataset.label}: ${(c.parsed.y * 100).toFixed(1).replace('.',',')}%` } } },
                         elements: { line: { tension: 0.1 }, point: { radius: 0 } }
